--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,11 +1,11 @@
 :root {
-  --background: #ffffff;
+  --background: #ebe8e8;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ebe8e8;
     --foreground: #ededed;
   }
 }
@@ -17,7 +17,6 @@ html {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
